Rework proto defs, add log types (#144)
* Rework proto defs, add log types

- Add version suffixes to all types
- Make dsseEnvelope strongly typed at request time
- Add proto defs for types that are persisted to the log
- Add Verifier as field in Signature message


---------
